# python-uv-project-scaffold

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
scripts/: dev.sh  prod.sh
src/: __init__.py  main.py
tests/: test_main.py
