[project]
name = "scaffold"
version = "0.1.0"
description = "Projeto Python inicializado com UV"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
scaffold = "src.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
